--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ doc/api/
 # dotenv environment variables file
 .env*
 
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
+
 # Avoid committing generated Javascript files:
 *.dart.js
 *.info.json      # Produced by the --dump-info flag.
